  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2006/09/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- implemented the function GWEN_Logger_SetLogFunction()


2006/07/16: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added a simple signal/slot framework which allows a single signal to be
  connected to multiple matching slots
- fixed a bug in list.c (pointed out by "Archimedes Submerged")


2006/07/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_List_Erase(): The given iterator is move toward the next element in any
  case (if there is no next element then the iterator will point to 0).
  This makes the return conditions clear to the caller.


===========================================================================
MARK: released gwenhywfar-2.3.1 (2006/07/13)
===========================================================================


2006/06/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added GWEN_DBIO plugin for XML data


===========================================================================
MARK: released gwenhywfar-2.3.0 (2006/06/15)
===========================================================================


2006/06/16: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- decreased verbosity of nl_packets.c


2006/06/03: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- plugins/storage/localfiles: 
  - fixed a problem with the latest checkin: